CI images update

--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-04 14:54:11
+lastsearch = 2024-08-04 15:32:04
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -342,9 +342,9 @@ title = Suy ngắm 14 Đàng Thánh Giá - Kinh truyền thống
 url = https://www.tonggiaophanhanoi.org/suy-ngam-14-dang-thanh-gia-kinh-truyen-thong/
 
 [www.facebook.com]
-match = -31.2%%
-title = Anh Trai Vượt Ngàn Chông Gai
-url = https://www.facebook.com/story.php/?story_fbid=122168706932199321&id=61555979636804
+match = -212.5%%
+title = Tại sao V.League không chơi như Thai League, cho phép các ...
+url = https://www.facebook.com/100037593873375/videos/1232801161088673/?__so__=permalink
 
 [laodong.vn]
 match = -206.2%%
