--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-04 14:16:12
+lastsearch = 2024-08-04 15:34:47
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -11.8%%
-title = HOA fined me for this #hoa
-url = https://www.tiktok.com/@koltindarley/video/7320370539850206507
+match = -152.9%%
+title = HOA Tries Entering my House: Breaking News and HOA ...
+url = https://www.tiktok.com/@koltindarley/video/7373712439390637354?lang=en
 
 [www.steadily.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -182.4%%
-title = MACV: The Joint Command in the Years of Escalation, 1962-1967
-url = https://books.google.com/books?id=rbR68tUm1-gC&pg=PA154&lpg=PA154&dq=man+in+hoa+dep+14&source=bl&ots=i2BZVVlkXI&sig=ACfU3U3twdAlZoqtELHS_hx9h_poQYWMlg&hl=en&sa=X&ved=2ahUKEwiJ7NCC6cqHAxXOLEQIHWuPMcAQ6AF6BAg8EAM
+match = -152.9%%
+title = The Monthly Army List - Page 5 - Google Books Result
+url = https://books.google.com/books?id=DrsrAQAAIAAJ&pg=RA1-PA5&lpg=RA1-PA5&dq=man+in+hoa+dep+14&source=bl&ots=2Ces4hrg-r&sig=ACfU3U1J0DrH4sCDAfYveSJjB57SnI5_Jw&hl=en&sa=X&ved=2ahUKEwiksKj39tqHAxUZl-4BHU6wCZUQ6AF6BAgdEAM
 
 [www.house.gov]
 match = 11.8%%
@@ -397,8 +397,8 @@ title = Fiscal and Policy Note for House Bill 1039
 url = https://mgaleg.maryland.gov/2024RS/fnotes/bil_0009/hb1039.pdf
 
 [mpdc.dc.gov]
-match = -70.6%%
-title = Metropolitan Police Department - DC.gov
+match = -150.0%%
+title = | mpdc
 url = https://mpdc.dc.gov/
 
 [consumer.sc.gov]
@@ -482,9 +482,9 @@ title = College Navigator - National Center for Education Statistics
 url = https://nces.ed.gov/collegenavigator/
 
 [www.pinterest.com]
-match = -152.9%%
-title = 100 Dragon Tattoo Designs: A Comprehensive Guide - Art
-url = https://www.pinterest.com/pin/292100725812835402/
+match = -135.3%%
+title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
+url = https://www.pinterest.com/pin/chumanhmuahoadepohagiangthang03202014--150307706306200503/
 
 [calcivilrights.ca.gov]
 match = -147.1%%
@@ -535,4 +535,19 @@ url = https://independentamericancommunities.com/2024/04/17/arizonas-new-hoa-law
 match = -100.0%%
 title = 2024 LEGISLATIVE UPDATES FOR FLORIDA ...
 url = https://www.paveselaw.com/2024-legislative-updates-for-florida-homeowners-association/
+
+[www.elleman.vn]
+match = -23.5%%
+title = 14 buc anh dep ve dai duong
+url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-nhat-national-geographic/attachment/14-buc-anh-dep-ve-dai-duong/
+
+[kenh14.vn]
+match = -170.6%%
+title = Lý Thấm được khen càng ngày càng nhuận sắc, tạo hình ...
+url = https://kenh14.vn/my-nhan-hoa-ngu-duoc-khen-cang-ngay-cang-nhuan-sac-tao-hinh-co-trang-o-phim-moi-dep-me-man-20240707231858034.chn
+
+[dienmaycholon.com]
+match = -182.4%%
+title = Cắt tóc ngày nào tốt? Ngày cắt tóc nhiều tài lộc, may mắn
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/cat-toc-ngay-nao-tot-ngay-cat-toc-nhieu-tai-loc-may-man
 
