--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOopsyjJP4uoeI0x0m3xy3jq3FDxiGRI6za7Swc6TDWYiUmvFWhgz
 
 [www.facebook.com]
-match = -77.8%%
-title = NEM Fashion - NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
+match = -100.0%%
+title = NEM Fashion - 𝑴𝒊𝒙 đ𝒐̂̀ 𝒗𝒐̛́𝒊 𝒂́𝒐 𝒍𝒆𝒏 𝒕𝒓𝒐𝒏𝒈 𝒏𝒈𝒂̀𝒚 ...
+url = https://www.facebook.com/nemfashion.official/posts/𝑴𝒊𝒙-đ𝒐̂̀-𝒗𝒐̛́𝒊-𝒂́𝒐-𝒍𝒆𝒏-𝒕𝒓𝒐𝒏𝒈-𝒏𝒈𝒂̀𝒚-𝒈𝒊𝒐́-𝒎𝒖̀𝒂-𝒗𝒆̂̀-thời-tiết-chuyển-gió-mùa-cũng-/1896608763810349/
 
 [thegioinem.com]
 match = -55.6%%
@@ -77,9 +77,9 @@ title = CÁCH LÀM NEM HẢI SẢN NGON CHUẨN VỊ
 url = https://vuacua.vn/blogs/tips-va-cac-cong-thuc-nau-an/cach-lam-nem-hai-san-ngon-chuan-vi
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [icondenim.com]
 match = -133.3%%
