--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-04 11:19:08
+lastsearch = 2024-08-04 15:35:27
 
 [demxanh.com]
 match = -47.8%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Ruột gối kê Everhome M 45x65
 url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html
 
 [tiki.vn]
-match = -60.9%%
-title = Ruột gối tơ tằm 50*70 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ruột gối tơ tằm 50*70
+match = -87.0%%
+title = Ruột gối hơi hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=ruột gối hơi
 
 [m.thitruongsi.com]
 match = -43.5%%
