--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-04 14:34:42
+lastsearch = 2024-08-04 15:30:39
 
 [www.linkedin.com]
 match = -172.7%%
@@ -112,9 +112,9 @@ title = Kéo cắt thép tấm KS Tools 118.0148 cắt thuận tay trái.
 url = https://kstoolsvietnam.vn/keo-cat-ton-tam/keo-cat-thep-tam-ks-tools-1180148-cat-thuan-tay-trai.html
 
 [sagatexvietnam.com.vn]
-match = -290.9%%
-title = Tấm trang trí giường khách sạn Sagatex, Free thêu logo
-url = https://sagatexvietnam.com.vn/product/tam-trang-tri-giuong-khach-san/
+match = -345.5%%
+title = 3 mẫu tấm trải trang trí giường khách sạn Sagatex sang trọng
+url = https://sagatexvietnam.com.vn/tam-trai-trang-tri-giuong-khach-san/
 
 [tamdaexpress.eu]
 match = -218.2%%
