CI images update

--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-08-04 15:26:38
+lastsearch = 2024-08-04 15:58:37
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -18,8 +18,8 @@ url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
 
 [nemcaosuthangloi.vn]
 match = 33.3%%
-title = NỆM CAO SU WONDERFOAM THẮNG LỢI
-url = https://nemcaosuthangloi.vn/nem-cao-su-wonderfoam-thang-loi.html
+title = NỆM CAO SU NON THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-non-thang-loi.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
