--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-04 13:19:56
+lastsearch = 2024-08-04 15:48:25
 
 [changagoidemsonghong.com]
-match = -12.5%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = 4.2%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = -8.3%%
-title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
+match = -25.0%%
+title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
+url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOoouFLcraK2HyCrjyWy5AihbcHzhCyVJ5peFK_qjb0JbCoiHOicN
 
 [changagoibenlinda.com]
 match = -12.5%%
