--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-04 15:15:14
+lastsearch = 2024-08-04 15:59:38
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -695,4 +695,9 @@ url = https://lasvegas.electricdaisycarnival.com/
 match = -184.6%%
 title = THERMOSTATIC EXPANSION VALVES IDENTlFlCATlON
 url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-pdf-files/Sporlan-pdf-010/210-60.pdf
+
+[www.lazada.vn]
+match = -176.9%%
+title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/ga-ni-long/
 
