--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-04 13:49:04
+lastsearch = 2024-08-04 15:46:43
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = 10.0%%
-title = Uyen Ninh Fruit Art Mom
-url = https://www.tiktok.com/discover/uyen-ninh-fruit-art-mom
+match = -35.0%%
+title = How to Get Agents Tokens in Valorant
+url = https://www.tiktok.com/discover/how-to-get-agents-tokens-in-valorant
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -37,14 +37,14 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 5.0%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = 20.0%%
+title = Recently Added Coins
+url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -125.0%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
