--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-17 17:46:25
 lastsearch = 2024-08-04 15:41:35
 
 [www.diepxuan.com]
-match = 37.5%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 20.8%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [www.tripadvisor.com]
 match = -112.5%%
