--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-17 10:43:32
 lastsearch = 2024-08-04 15:37:07
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 8.0%%
