--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-04 15:19:47
+lastsearch = 2024-08-04 16:12:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -249,7 +249,7 @@ url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-posta
 [agasound.vn]
 match = 6.7%%
 title = D2.15 - AGASOUND
-url = https://agasound.vn/d215
+url = https://agasound.vn/d215?p=5
 
 [nhiepanhdoisong.vn]
 match = -246.7%%
