--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-04 13:25:32
+lastsearch = 2024-08-04 16:32:18
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -100.0%%
-title = Tình Cờ - Tập 16 | Phim Bộ Tình Cảm Đài Loan Hay Nhất ...
-url = https://www.youtube.com/watch?v=dBJXDZlf9_4
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
 
 [m.facebook.com]
 match = -95.2%%
@@ -240,4 +240,9 @@ url = https://sabomall.com/sitemap/category/phukiencongnghe/3
 match = -109.5%%
 title = Thông báo - Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại ...
 url = https://www.taiwanembassy.org/vnsgn_vi/cat/12.html
+
+[travel.com.vn]
+match = -114.3%%
+title = Du lịch Đài Loan | Đặt Tour Đài Loan trọn gói giá ưu đãi ...
+url = https://travel.com.vn/du-lich-nuoc-ngoai/tour-dai-loan.aspx
 
