--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-04 14:49:38
+lastsearch = 2024-08-04 16:32:39
 
 [shopee.vn]
-match = -8.0%%
-title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
-url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
+match = -32.0%%
+title = Mùng chụp tự bung khung gấp gọn thông minh cao cấp
+url = https://shopee.vn/Mùng-chụp-tự-bung-khung-gấp-gọn-thông-minh-cao-cấp-Màn-chụp-tự-bung-người-lớn-1m2-1m6-1m8-2m2-đỉnh-vuông-i.472489092.2973784523
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -36.0%%
+title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
+url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
 
 [www.mungbaobao.com]
-match = -28.0%%
-title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
-url = https://www.mungbaobao.com/
+match = -32.0%%
+title = Mùng Chụp Tự Bung Cao Cấp Giá Tốt, Xu Hướng Mới ...
+url = https://www.mungbaobao.com/mung-chup-tu-bung-cao-cap.html
 
 [tiki.vn]
 match = -8.0%%
@@ -27,9 +27,9 @@ title = Màn đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
-match = -52.0%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -12.0%%
+title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
 
 [manthutrang.com]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOor4g6ZupafiJDDufL9bpVNbU8hdLYaaS5rzy91q3XaDJobkxtMC
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
