CI images update

--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-04 06:15:48
+lastsearch = 2024-08-04 16:51:41
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -200,4 +200,9 @@ url = https://gialai.gov.vn/Lists/VBChiDaoDieuHanh/Attachments/2378/971 QĐ UBND
 match = 0.0%%
 title = DEN NgaY:.D2611°
 url = https://svhtt.thuathienhue.gov.vn/Download.aspx?name=2455qd1.pdf&TuKhoa=vb&khoa=422
+
+[hanvico.com.vn]
+match = -133.3%%
+title = Bộ chiếu mát Tencel than hoạt tính S-Cool - CT5
+url = https://hanvico.com.vn/san-pham/ct5/
 
