--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-04 13:23:05
+lastsearch = 2024-08-04 16:56:50
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-C34y0&sig=ACfU3U0Ecl88958_2XW_sWTgIKErnYhz_A&hl=en&sa=X&ved=2ahUKEwi16cu_0tqHAxXGEVkFHRvuBqUQ6AF6BAgXEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-D81zW&sig=ACfU3U2u9egsZGh_gVFkny67Hrv8soLn1Q&hl=en&sa=X&ved=2ahUKEwj6lOuiiduHAxXJD0QIHVGzGVcQ6AF6BAgZEAM
 
 [ottawabraves.com]
 match = -292.3%%
