--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-04 14:39:31
+lastsearch = 2024-08-04 16:48:50
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Bộ thảm ghế gỗ 1 dài 2 ngắn
 url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-6
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.lazada.vn]
 match = -77.3%%
@@ -145,4 +145,9 @@ url = https://bearsofa.com/mau-tham-trai-san-dep/
 match = -27.3%%
 title = Ga gối Sông Hồng Basic cotton BC20014
 url = https://songhonghanoi.vn/ga-goi-song-hong-basic-cotton-bc20014.html
+
+[changagoidemsonghong.online]
+match = -31.8%%
+title = Chăn đông Sông Hồng Basic cotton BC24101
+url = https://changagoidemsonghong.online/chan-dong-song-hong-basic-cotton-bc24101.html-1
 
