--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-03 18:25:13
+lastsearch = 2024-08-04 16:46:47
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -33.3%%
-title = TRUNG QUỐC VÀ ĐÀI LOAN KHÁC NHAU RA SAO?
-url = https://www.youtube.com/watch?v=F83JmjfnxJ8
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=GzepFXdUfeQ
 
 [roc-taiwan.org]
 match = -66.7%%
