--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-04 15:53:35
+lastsearch = 2024-08-04 16:48:09
 
 [www.facebook.com]
-match = -45.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
+match = -145.0%%
+title = Hé lộ siêu phẩm mới - bộ chăn ga Pyeoda Dora Xem chi tiết ...
+url = https://www.facebook.com/vuanem.vn/videos/-hé-lộ-siêu-phẩm-mới-bộ-chăn-ga-pyeoda-dora-xem-chi-tiết-httpsvuanemcombo-chan-g/1219711438195514/
 
 [demxanh.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = -45.0%%
+title = Bộ chăn ga gối tencel eu pyeoda 5 món
+url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-tencel-eu-pyeoda-5-mon
 
 [pyeoda.vn]
 match = -95.0%%
