--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-04 15:46:43
+lastsearch = 2024-08-04 16:50:40
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -37,9 +37,9 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 20.0%%
-title = Recently Added Coins
-url = https://cryptoslate.com/recently-added-coins/
+match = 5.0%%
+title = Cryptocurrency Rankings
+url = https://cryptoslate.com/coins/
 
 [30rates.com]
 match = -125.0%%
