--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-08-04 13:46:15
+lastsearch = 2024-08-04 16:49:35
 
 [www.diepxuan.com]
-match = 10.5%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOorET8dRZvXx-7o42vzCJ_Mnx7XkFwfHZC3LsDOnvdiJwaZyXTlK
+match = -16.7%%
+title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [www.youtube.com]
 match = -75.0%%
