--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-04 09:58:32
+lastsearch = 2024-08-04 17:00:24
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -38,7 +38,7 @@ url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
 match = -5.0%%
-title = Gary Vilke - UCSD Profiles
+title = Gary Vilke | UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
