CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-04 16:01:01
+lastsearch = 2024-08-04 17:22:13
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -430,4 +430,9 @@ url = https://apnews.com/article/north-korea-russia-kim-jong-un-putin-military-a
 match = -69.6%%
 title = Lessons from South Korea's approach to tackling ...
 url = https://www.brookings.edu/articles/lessons-from-south-koreas-approach-to-tackling-disinformation/
+
+[www.bbc.co.uk]
+match = -26.7%%
+title = Home - BBC News
+url = https://www.bbc.co.uk/news
 
