--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-04 15:46:22
+lastsearch = 2024-08-04 17:16:48
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -104.8%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [www.diepxuan.com]
-match = -81.0%%
-title = Điệp Xuân Bộ ga gối chun xoa 16 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
+match = -9.5%%
+title = Bộ chun xoa 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-xoa-160x200.html
 
 [everon365.vn]
 match = 33.3%%
