--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-04 12:24:50
+lastsearch = 2024-08-04 17:20:13
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -77,9 +77,9 @@ title = Con Lắc Đơn Là Gì? Công Thức, Vận Tốc, Chu Kỳ Và Tần S
 url = https://vuihoc.vn/tin/thpt-con-lac-don-1139.html
 
 [baomoi.com]
-match = -81.2%%
-title = Giữ nghề dệt chiếu truyền thống Thu Xà
-url = https://baomoi.com/giu-nghe-det-chieu-truyen-thong-thu-xa-c48769346.epi
+match = -118.8%%
+title = Nhiều tuyến đường TPHCM ngập nặng sau cơn mưa
+url = https://baomoi.com/nhieu-tuyen-duong-tphcm-ngap-nang-sau-con-mua-c49813243.epi
 
 [nhathuoclongchau.com.vn]
 match = -200.0%%
@@ -183,8 +183,8 @@ url = https://minhtuanmobile.com/tin-tuc/cuu-long-thanh-trai-he-lo-lich-chieu-2-
 
 [hanoimoi.vn]
 match = -187.5%%
-title = Chủ tịch nước Tô Lâm gặp mặt Ban liên lạc Đại đoàn 305 Dù
-url = https://hanoimoi.vn/chu-tich-nuoc-to-lam-gap-mat-ban-lien-lac-dai-doan-305-du-dac-cong-672812.html
+title = Viettel miễn phí 12 tháng sử dụng phần mềm kế toán ...
+url = https://hanoimoi.vn/viettel-mien-phi-12-thang-su-dung-phan-mem-ke-toan-easybooks-cho-doanh-nghiep-moi-thanh-lap-673864.html
 
 [www.pharmacity.vn]
 match = -193.8%%
