--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-04 14:37:45
+lastsearch = 2024-08-04 17:15:05
 
 [bedding.vn]
 match = -123.1%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -323.1%%
-title = Changjoo Kim - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/changjkm
+match = -292.3%%
+title = Chong Ahn - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/ahnch
 
 [thegioinem.com]
 match = -230.8%%
@@ -237,9 +237,9 @@ title = Graduate Student Placements and Achievements
 url = https://economics.ucdavis.edu/graduate-student-placements
 
 [law.justia.com]
-match = -292.3%%
-title = Chunn v. State :: 1993 :: Court of Appeals of Georgia ...
-url = https://law.justia.com/cases/georgia/court-of-appeals/1993/a93a1152-0.html
+match = -307.7%%
+title = State v. Chun :: 2004 :: Court of Appeals of Georgia Decisions
+url = https://law.justia.com/cases/georgia/court-of-appeals/2004/a04a0343.html
 
 [web1.sph.emory.edu]
 match = -57.1%%
