--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-04 16:12:25
+lastsearch = 2024-08-04 17:13:18
 
 [www.tiktok.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnmi64hV&sig=ACfU3U1cJsaZJB3fFkTtl_jEMOblba2XfQ&hl=en&sa=X&ved=2ahUKEwi51O-r_9qHAxUyF1kFHSV0BgoQ6AF6BAgZEAM
+match = -123.5%%
+title = The army list - Page 463 - Google Books Result
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC69qrNQTM&sig=ACfU3U2_tlAQ4STBqalH5EiJoJDNZL5A9A&hl=en&sa=X&ved=2ahUKEwiq8_X5jNuHAxXCHEQIHWeGAmgQ6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
