--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-04 11:25:46
+lastsearch = 2024-08-04 17:24:18
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -29,7 +29,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/?srsltid=AfmBOorVE3ZZo9GzuB0kKUJJQG3XiU1DG7E_93fGPlSGoWVl3G-w5wVM
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -47,9 +47,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.diepxuan.com]
-match = 36.2%%
-title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html?srsltid=AfmBOoq3T4tJbQM-lbQD2-jhoxYCxTT4-Cic2fu1fo0PQevLuLNLbX0I
+match = 53.2%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everon.online]
 match = 31.9%%
