--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-04 09:54:07
+lastsearch = 2024-08-04 17:37:45
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = -23.1%%
+title = Coco Chan - Wellesley
+url = https://hk.linkedin.com/in/coco-chan-734351222
 
 [www.instagram.com]
 match = -238.5%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -284.6%%
-title = #collage avec @Steven Chan Hoi Sing ce son me motive !#fit ...
-url = https://www.tiktok.com/@dosido6/video/7365180214156004641
+match = -200.0%%
+title = #stitch with @Steven Chan Hoi Sing #dance #lekker
+url = https://www.tiktok.com/@goodguy_goodlife/video/7378585999766572321
 
 [admissions.hku.hk]
 match = -38.5%%
@@ -42,8 +42,8 @@ title = I Am an HKUer - Hong Kong
 url = https://admissions.hku.hk/hkuer
 
 [www.alamy.com]
-match = -200.0%%
-title = Hong Kong-born Canadian actress Grace Chan ...
+match = -246.2%%
+title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
