--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-04 11:23:38
+lastsearch = 2024-08-04 17:33:39
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Vietnamese language
-url = https://en.wikipedia.org/wiki/Vietnamese_language
+match = 17.4%%
+title = List of cities in Vietnam
+url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
 match = -43.5%%
@@ -297,9 +297,9 @@ title = }zJ-----
 url = https://storage-vnportal.vnpt.vn/cmu-sgddt/6228/Nam2023/ho-tro-phuc-vu-le-giao-nhan-quan-tpcm-23.pdf
 
 [suckhoedoisong.vn]
-match = -91.3%%
-title = Thanh tra đột xuất, làm rõ những bất thường về điểm thi ...
-url = https://suckhoedoisong.vn/thanh-tra-dot-xuat-lam-ro-nhung-bat-thuong-ve-diem-thi-vao-lop-10-thpt-o-thai-binh-169240730143803723.htm
+match = -95.7%%
+title = Vụ điểm thi 'bất thường' vào lớp 10 Thái Bình: Tạm đình chỉ ...
+url = https://suckhoedoisong.vn/vu-bat-thuong-diem-thi-vao-lop-10-thai-binh-tam-dinh-chi-giam-doc-so-gddt-169240801113717864.htm
 
 [tuoitrenews.vn]
 match = -113.0%%
