--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-04 17:13:42
+lastsearch = 2024-08-04 17:44:19
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=GzepFXdUfeQ
+match = -109.5%%
+title = 60 Giây Chiều - Ngày 02/08/2024 - HTV Tin Tức Mới Nhất 2024
+url = https://www.youtube.com/watch?v=tIiV66LvrZg
 
 [roc-taiwan.org]
 match = -66.7%%
