--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-04 17:12:36
+lastsearch = 2024-08-04 17:47:27
 
 [shopee.vn]
 match = -171.4%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/mung-chup-tu-bung.html
 [www.lazada.vn]
 match = -164.3%%
 title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html?srsltid=AfmBOoolMlKdlgQ9gCvZz8leSQFB6fP30v77ttSDUr-_9Ur3lxZjhndM
 
 [www.mungbaobao.com]
 match = -214.3%%
