--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-04 17:38:27
+lastsearch = 2024-08-04 17:48:29
 
 [www.diepxuan.com]
 match = -31.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+match = -181.2%%
+title = use my discount code AYASCHANNEL1 on @YesStyle ...
+url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
 
 [archiveofourown.org]
 match = -137.5%%
