CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-04 15:19:26
+lastsearch = 2024-08-04 18:33:15
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,14 +17,14 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = -17.9%%
-title = Bộ chun chần WarmDream 160x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-160x200-lua.html?srsltid=AfmBOop6H_7taXngmmz1K8JrcejSfooN16lGKoGZQYmj5aPxLuaLaSOf
+match = -3.6%%
+title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOorK-qNZAoo5AW1AcFUCBiuet28Mv6cO5YMkt6WqoYJCX5yl_sTf
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
 
 [everonminhkhai.com]
 match = -26.7%%
