--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-04 16:47:06
+lastsearch = 2024-08-04 18:26:43
 
 [www.dem365.vn]
-match = -61.9%%
-title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
+match = -81.0%%
+title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -66.7%%
-title = Bộ chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/bộ chăn phao
+match = 0.0%%
+title = HẠT CHẶN PHAO LOẠI 6 HẠT SIÊU RẺ
+url = https://shopee.vn/HẠT-CHẶN-PHAO-LOẠI-6-HẠT-SIÊU-RẺ-i.167222325.12107796108
 
 [suongtuyet.com]
 match = 28.6%%
@@ -37,9 +37,9 @@ title = Tại sao chặn phao cần 4 hạt chặn? Và trải nghiệm thực t
 url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 
 [www.lazada.vn]
-match = -76.2%%
-title = Chăn Mền Phao Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-men-phao/
+match = -33.3%%
+title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
 match = -33.3%%
