--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-04 16:59:19
+lastsearch = 2024-08-04 18:30:29
 
 [tiki.vn]
 match = 16.0%%
@@ -32,9 +32,9 @@ title = Xin chào, tôi ở Đài Loan | Kaohsiung
 url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 6.7%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [www.roc-taiwan.org]
 match = -44.0%%
@@ -290,4 +290,9 @@ url = https://allinvn.net/
 match = -24.0%%
 title = MÚI GIỜ ĐÀI LOAN NHƯ THẾ NÀO SO VỚI VIỆT NAM?
 url = https://toptour.com.vn/mui-gio-dai-loan-nhu-the-nao-so-voi-viet-nam
+
+[www.taiwan-panorama.com]
+match = -64.0%%
+title = Thông điệp đến từ Đất mẹ Đài Loan - Bảo tàng thổ nhưỡng ...
+url = https://www.taiwan-panorama.com/vi/Articles/Details?Guid=8fe4108f-61c9-4bd2-9cc7-a8fbd45155e9&CatId=10&postname=Thông điệp đến từ Đất mẹ-Đài Loan - Bảo tàng thổ nhưỡng thế giới
 
