--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-04 16:53:02
+lastsearch = 2024-08-04 18:30:52
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = -70.0%%
+title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp Tiện Dụng ...
+url = https://shopee.vn/Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-Tiện-Dụng-Cho-Mọi-Nhà-i.530367907.18875456417
 
 [tchome.vn]
 match = 20.0%%
