--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-04 14:19:59
+lastsearch = 2024-08-04 18:30:06
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = MC Ren
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpKLlm8&sig=ACfU3U2Rhu0P6LrrNM4IxcU1RLB8M8wEVA&hl=en&sa=X&ved=2ahUKEwjt7e-oo9qHAxUTGEQIHWzyC20Q6AF6BAgaEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsjQ-bqVd&sig=ACfU3U1QTveZ_1C0q3m_ZtGxKSymFVXy_Q&hl=en&sa=X&ved=2ahUKEwj2jP-OntuHAxVQMDQIHbdJDPQQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
