--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -67,9 +67,9 @@ title = [GIÁ ĐỆM 2024] Nệm cao su thiên nhiên ...
 url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 
 [www.lazada.vn]
-match = 13.2%%
-title = Nệm cao su 100%% thiên nhiên - Felix Comfort - độ cứng ...
-url = https://www.lazada.vn/products/nem-cao-su-100-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-nang-do-co-the-thoang-khi-toi-uu-i2295048242.html
+match = 5.3%%
+title = Nệm cao su thiên nhiên Felix Comfort - Độ cứng tiêu chuẩn ...
+url = https://www.lazada.vn/products/nem-cao-su-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-15cm-i2294959349-s11133506275.html
 
 [nemcaosuthangloi.vn]
 match = 18.2%%
