--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -24,7 +24,7 @@ url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-
 [demxanh.com]
 match = -109.5%%
 title = Top 10 loại nệm lò xo liên kết chất lượng và bán chạy nhất!
-url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html
+url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html?srsltid=AfmBOoq-MpIXUyMpKGuoblIHx40RBhUwmGo0FIcSGUs5jZs7wC6Ra_3-
 
 [maybedding.vn]
 match = 38.9%%
