--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-04 13:17:52
+lastsearch = 2024-08-04 18:26:01
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -44.0%%
-title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+match = 5.3%%
+title = Mua ruột gối ở đâu?
+url = https://demxanh.com/mua-ruot-goi-o-dau.html?srsltid=AfmBOoqO2TDux3f6lzPA84JLRei9VfmFJA93-IVFoFzUTt6daGQCYrG5
 
 [khodem.vn]
 match = 8.0%%
