--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-04 15:45:40
+lastsearch = 2024-08-04 18:25:19
 
 [shopee.vn]
-match = -52.4%%
-title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
-url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
+match = -100.0%%
+title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
+url = https://shopee.vn/Thảm-chiếu-đa-năng-trải-sàn-trải-giường-loại-mỏng-dùng-4-mùa.-tấm-trải-nệm-mỏng-i.78513158.10635430597
 
 [cafeland.vn]
 match = -100.0%%
@@ -107,9 +107,9 @@ title = Tấm lót chống thấm trải giường 2 lớp Baby Unmei - Ngẫu N
 url = https://unmei.com.vn/san-pham/tam-lot-chong-tham-trai-giuong-2-lop-baby-unmei-58x72cm-1-cai-bich-tam-lot-chong-tham-cho-be-hong-ngau-nhien/
 
 [noithattamviet.net]
-match = -81.0%%
-title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiện ...
-url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
+match = -85.7%%
+title = Những Mẫu Giường Ngủ 2m x 2m2 Đẹp, Ấn Tượng Dành ...
+url = https://noithattamviet.net/cam-nang/nhung-mau-giuong-ngu-2m-x-2m2-dep-an-tuong-danh-cho-phong-ngu-rong
 
 [zenhomes.vn]
 match = -95.2%%
