--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-04 17:00:24
+lastsearch = 2024-08-04 18:26:22
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -11.8%%
+title = Pieter Dorrestein
+url = https://profiles.ucsd.edu/pieter.dorrestein
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 5.0%%
-title = Steve Braunstein, MD, PhD
-url = https://profiles.ucsf.edu/steve.braunstein
+match = 5.6%%
+title = Elizabeth Wick, MD
+url = https://profiles.ucsf.edu/elizabeth.wick
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -10.0%%
+title = Bacterial Terpenome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
 
 [profiles.ucla.edu]
 match = 0.0%%
