--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-04 17:23:16
+lastsearch = 2024-08-04 18:29:25
 
 [www.lazada.vn]
-match = -46.7%%
-title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
+match = -146.7%%
+title = vo goi tua lung - Vỏ gối vuông tựa lưng size 45x45cm
+url = https://www.lazada.vn/products/vo-goi-vuong-tua-lung-size-45x45cm-khong-co-ruot-goi-vo-goi-vuong-vo-goi-tua-lung-i222145077.html
 
 [shopee.vn]
 match = 13.3%%
@@ -133,8 +133,8 @@ url = https://dienmaycholon.com/goi-vo-goi?t=vo-goi
 
 [phedecor.com]
 match = 6.7%%
-title = PKT18 - Gối tựa lưng
-url = https://phedecor.com/goi-vuong-sofa--pkt18.html
+title = PKT17 - Gối tựa lưng
+url = https://phedecor.com/goi-vuong-sofa--pkt17.html
 
 [blanc.vn]
 match = 60.0%%
@@ -142,19 +142,19 @@ title = Vỏ gối vuông Logzen
 url = https://blanc.vn/vo-goi-vuong-logzen
 
 [www.quora.com]
-match = -100.0%%
-title = Does Cantonese sound like Vietnamese?
-url = https://www.quora.com/Does-Cantonese-sound-like-Vietnamese
+match = -213.3%%
+title = Why do Vietnam-born people who are part Chinese and ...
+url = https://www.quora.com/Why-do-Vietnam-born-people-who-are-part-Chinese-and-part-Vietnamese-speak-Cantonese
 
 [www.tiktok.com]
-match = -20.0%%
-title = Fish Sauce in Tagalog
-url = https://www.tiktok.com/discover/fish-sauce-in-tagalog
+match = -220.0%%
+title = Vietnamese EGGROLL in Rice paper vs Spring-roll Pastry ...
+url = https://www.tiktok.com/@nhi_v0/video/6984594605006245126?lang=en
 
 [cucthongke.quangtri.gov.vn]
-match = -146.7%%
-title = nhan dinh uc - Lãnh đạo về giải pháp công nghệ
-url = https://cucthongke.quangtri.gov.vn/article/ezH/nhan dinh uc
+match = -280.0%%
+title = sòng bạc đánh bạc trực tuyến malaysia 🌖 | v1.39.6 Microsoft Store
+url = https://cucthongke.quangtri.gov.vn/article/sòng bạc đánh bạc trực tuyến malaysia
 
 [juliabedding.com]
 match = -160.0%%
@@ -170,4 +170,9 @@ url = https://sieuthidienmaypico.com/vo-goi-vuong-tua-hoang-gia-cao-nti107317478
 match = 20.0%%
 title = VỎ CHĂN, GA, GỐI
 url = https://www.muji.com/vn/products/section/E30004
+
+[sinhvien.ufm.edu.vn]
+match = -200.0%%
+title = đá gà thomo ngày 15 thắng 10 - v2.14.47【For88.Com】
+url = https://sinhvien.ufm.edu.vn/hotFerrID.html
 
