CI images update

--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-04 18:28:46
+lastsearch = 2024-08-04 19:32:46
 
 [tiki.vn]
 match = -133.3%%
@@ -165,4 +165,9 @@ url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
 match = -100.0%%
 title = Mua Chan Cuu gần tôi với giao hàng miễn phí
 url = https://www.sayweee.com/vi/grocery-near-me/vietnamese-lang/explore/chan-cuu
+
+[hanvico.com.vn]
+match = -40.0%%
+title = Chăn lông cừu Ruby 210*240 - KN4
+url = https://hanvico.com.vn/san-pham/chan-long-cuu-ruby-210240-kn4/
 
