--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-04 14:56:56
+lastsearch = 2024-08-04 19:22:07
 
 [www.bible.com]
 match = -128.6%%
@@ -27,9 +27,9 @@ title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
 url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [manthutrang.com]
-match = -228.6%%
-title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
-url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
+match = -164.3%%
+title = Tư vấn mua và sử dụng màn chụp tự bung từ A đến Z
+url = https://manthutrang.com/blogs/tu-van/tu-van-mua-va-su-dung-man-chup-tu-bung-tu-a-den-z
 
 [easydream.vn]
 match = -185.7%%
