--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-04 17:48:08
+lastsearch = 2024-08-04 19:38:37
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -59.3%%
 title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron?srsltid=AfmBOoo7xY0pcEIcv4G3PESYAClndebOqyYMSAJyJU2lOAnzYSCVzByu
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-cha
 [demxanh.com]
 match = -11.1%%
 title = [HOT] Top 9 gối nằm mát tốt nhất cho ngày hè
-url = https://demxanh.com/goi-nam-mat-tot-nhat.html?srsltid=AfmBOoovcyOUiZwoLhAfX4ntyXJzIdTPezGY53no_-U77VNMQ_kaN7JN
+url = https://demxanh.com/goi-nam-mat-tot-nhat.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOopH1_6K14yORgiKtLBueYdIOwcV1SakACUQKI00cupBto4616DO
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [demhong.vn]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOorQhmNa0VAPqvKSQ5D6m2YMGBc7RzT_y_Wo0zxg6QwgbjfVzg5f
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
