--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-04 12:49:51
+lastsearch = 2024-08-04 19:26:42
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -22,9 +22,9 @@ title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Chăn ga gối Home mã H17-048 Sale 30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = -57.1%%
+title = Bộ chăn ga gối trẻ em mã TE19-09 khuyến mại -30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
 
 [demsonghonghanoi.com]
 match = -14.3%%
