--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-04 18:44:01
+lastsearch = 2024-08-04 19:31:23
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -57,9 +57,9 @@ title = Scholarly articles for chieu lac soc 16
 url = https://scholar.google.com/scholar?q=chieu+lac+soc+16&hl=en&as_sdt=0&as_vis=1&oi=scholart
 
 [moveek.com]
-match = -168.8%%
-title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/lotte-kosmo-tay-ho/
+match = -200.0%%
+title = Rạp Galaxy Kinh Dương Vương - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/galaxy-kinh-duong-vuong/
 
 [baolongan.vn]
 match = -31.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=6vFiUCFz494
 [books.google.com]
 match = -250.0%%
 title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
-url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSWIlZ2bb&sig=ACfU3U3W2Rf7XvimqIAcqmsUPfpG3CItkA&hl=en&sa=X&ved=2ahUKEwjB9ISdoduHAxXFIEQIHYG_H2QQ6AF6BAgdEAM
+url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSWIl00fe&sig=ACfU3U1znbXex10txPjNcXAavnhyYYy21Q&hl=en&sa=X&ved=2ahUKEwiqkL_oq9uHAxX2ElkFHcEQOu4Q6AF6BAgYEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
