--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-04 14:49:17
+lastsearch = 2024-08-04 19:23:59
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -505,4 +505,9 @@ url = https://www.seascanner.com/tui-cruises
 match = -66.7%%
 title = The transformation fallacy
 url = https://www.datacenterdynamics.com/en/analysis/the-transformation-fallacy-tui-cio/
+
+[origin.savvytime.com]
+match = -125.0%%
+title = Gangdong, South Korea to Tui, Spain
+url = https://origin.savvytime.com/converter/south-korea-gangdong-to-spain-tui
 
