--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-04 18:26:22
+lastsearch = 2024-08-04 19:32:25
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -11.8%%
-title = Pieter Dorrestein
-url = https://profiles.ucsd.edu/pieter.dorrestein
+match = -21.4%%
+title = Louise Laurent
+url = https://profiles.ucsd.edu/louise.laurent
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 5.6%%
-title = Elizabeth Wick, MD
-url = https://profiles.ucsf.edu/elizabeth.wick
+match = -5.0%%
+title = Christopher Dvorak, MD
+url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
-match = -10.0%%
-title = Bacterial Terpenome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
+match = -130.0%%
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [profiles.ucla.edu]
 match = 0.0%%
