CI images update

--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-04 18:53:15
+lastsearch = 2024-08-04 20:02:59
 
 [shopee.vn]
 match = 19.4%%
@@ -17,14 +17,14 @@ title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
 url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
 
 [www.diepxuan.com]
-match = 48.4%%
-title = Điệp Xuân Chiếu gấp Thái Bình 180x200
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x200.html
+match = -10.0%%
+title = Điệp Xuân Chiếu nhựa
+url = https://www.diepxuan.com/chieu/chieu-nhua.html?p=2
 
 [m.facebook.com]
-match = -6.5%%
-title = SANG NHƯỢNG + MUA BÁN TIỆM QUÁN Ở CHLB ĐỨC
-url = https://m.facebook.com/groups/1110093975748337/posts/7920608508030149/
+match = 12.9%%
+title = Chung cư nhà xã hội - Âu Cơ - Hoà Khánh
+url = https://m.facebook.com/groups/661270174478229/posts/1536393513632553/
 
 [trangvangvietnam.com]
 match = 20.0%%
