--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-04 04:37:44
+lastsearch = 2024-08-04 20:02:38
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,14 +12,14 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = -25.9%%
-title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
+match = -18.5%%
+title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
+url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
 
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOorykKA0_7wXYV-UDCotQRxaH65h9Tb9OUjAK8SsLbGZ4NdbSnFq
 
 [tiki.vn]
 match = 11.1%%
@@ -164,7 +164,7 @@ url = https://stockbiz.vn/tin-tuc/ha-noi-huong-toi-xuat-khau-thuy-san/26441575
 [metric.vn]
 match = -48.1%%
 title = Báo cáo thị trường Chăn lông tuyết 5kg dành cho doanh ...
-url = https://metric.vn/chan-long-tuyet-5kg
+url = https://metric.vn/chan-long-tuyet-5kg?srsltid=AfmBOoqgoTc1tXfxWdGNdf0UuywaBRSqDtB9aHHzWHbVwPfV2xU67nBO
 
 [ts.udn.vn]
 match = -10.0%%
@@ -199,7 +199,7 @@ url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOoooWpqrvK4vbw-pJqrpT22XrC_Htx0N3apfEmCNjPdmGcpGK1BS
 
 [cafef.vn]
 match = -18.5%%
