--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-04 14:20:44
+lastsearch = 2024-08-04 19:56:02
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -152,9 +152,9 @@ title = Hành trình thai giáo 280 ngày by Nguyễn Huy Hoàng
 url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 
 [m.facebook.com]
-match = 48.1%%
-title = Chợ đồ cũ ĐÀI LOAN (TAIWAN)
-url = https://m.facebook.com/groups/1438275593382390/posts/1632067434003204/
+match = 17.9%%
+title = Việt Nam & Đài Loan👭👬 | Nắng đã có áo nắng
+url = https://m.facebook.com/groups/2291871784221545/posts/26056620270653363/
 
 [dabanhmat.com]
 match = -28.6%%
