--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-04 17:15:05
+lastsearch = 2024-08-04 20:04:21
 
 [bedding.vn]
 match = -123.1%%
@@ -62,9 +62,9 @@ title = UGA College of Public Health | For doctoral student Tzu ...
 url = https://www.instagram.com/p/C3au3yItjnC/?img_index=publichealthuga
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -276.9%%
-title = Comparative Effectiveness of Anti-TNF in Combination ...
-url = https://pubmed.ncbi.nlm.nih.gov/37004887/
+match = -269.2%%
+title = The RAB39B p.G192R mutation causes X-linked dominant ...
+url = https://pubmed.ncbi.nlm.nih.gov/26399558/
 
 [www.uscourts.gov]
 match = -46.2%%
