--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-04 17:24:18
+lastsearch = 2024-08-04 19:56:47
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOorjMLT7tHWgzImOVm9DpDMlXhLyWJWlUIhSl0ttQ1ea1_VUpQhE
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -47,9 +47,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.diepxuan.com]
-match = 53.2%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
 match = 31.9%%
