--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-04 18:19:55
+lastsearch = 2024-08-04 20:05:21
 
 [demxanh.com]
-match = -47.8%%
-title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
-url = https://demxanh.com/ruot-goi-olympia.html?srsltid=AfmBOoq5Zztlyy1e3dIYNG9JsGFMoLjMDw4iOOENcknBIWoz7EhAgdjZ
+match = -43.5%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/Combo-2-ruột-gối-korea-cao-cấp-ép-hơi-kích-thư
 [everonvn.com.vn]
 match = -82.6%%
 title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
-url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay?srsltid=AfmBOoqj8UqDSJUUfmH2YLoVC_huxuVS9oN6IurzKykNkwpJ5hP3W7Hd
+url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
 
 [thegioidemviet.vn]
-match = -21.7%%
-title = BẢNG GIÁ RUỘT GỐI MICRO VIỆT Á CHÍNH HÃNG
-url = https://thegioidemviet.vn/ruot-chan-ruot-goi-micro-viet-a-sao-chep/
+match = -39.1%%
+title = BẢNG GIÁ RUỘT GỐI BAMBOO - CHÍNH HÃNG VIỆT Á
+url = https://thegioidemviet.vn/ruot-chan-ruot-goi-viet-a-sao-chep/
 
 [goihuyhoang.com]
 match = -104.3%%
@@ -42,9 +42,9 @@ title = Phân phối ruột gối bông chính hãng giá rẻ nhất Hà Nội
 url = https://thegioidemonline.com/ruot-goi-bong.html
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Điệp Xuân Ruột gối kê Everhome M 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html?srsltid=AfmBOoqAlsf5KSixhL_wIAxhay3pJfKf_SRI9PDQFtJcKeTzED3ZCMhs
+match = -21.7%%
+title = Ruột gối kê Korea 45x65 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 
 [tiki.vn]
 match = -87.0%%
@@ -55,4 +55,9 @@ url = https://tiki.vn/search?q=ruột gối hơi
 match = -43.5%%
 title = COMBO 2 ruột gối hoa hút chân không kt 45x65 giá sỉ
 url = https://m.thitruongsi.com/combo-2-ruot-goi-hoa-hut-chan-khong-kt-45x65-1551618.html
+
+[everon.com.vn]
+match = 33.3%%
+title = RUỘT GỐI 5S EVERON
+url = https://everon.com.vn/ruot-goi-5s-everon/
 
