CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-04 14:25:38
+lastsearch = 2024-08-04 20:28:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,8 +17,8 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -218.8%%
-title = 21-08-2023 Thời sự chiều 18h30 | 21-08-2023 Thời sự chiều ...
+match = -187.5%%
+title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
 url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
 
 [thuvienphapluat.vn]
@@ -102,9 +102,9 @@ title = mibetel hct 40mg|Casino Online Châu Á: Đánh Thức Mọi ...
 url = https://tuyensinh.epu.edu.vn/xiazai/mibetel-hct-40mg.phtm
 
 [chuthapdotphcm.org.vn]
-match = -187.5%%
-title = Lớp Sơ cấp cứu cơ bản Khóa 13, ngày 03/8/2024 (thứ bảy)
-url = https://chuthapdotphcm.org.vn/tin-tuc/thong-bao-chieu-sinh-lop-so-cap-cuu
+match = -156.2%%
+title = Hội Chữ thập đỏ Thành phố Hồ Chí Minh | Trang chủ
+url = https://chuthapdotphcm.org.vn/
 
 [bandantoc.soctrang.gov.vn]
 match = -218.8%%
@@ -197,9 +197,9 @@ title = Người đàn ông đi lạc trong rừng Quảng Nam suốt 4 ngày ..
 url = https://thanhnien.vn/nguoi-dan-ong-di-lac-trong-rung-quang-nam-suot-4-ngay-chi-uong-nuoc-cam-hoi-185240608180716305.htm
 
 [baotintuc.vn]
-match = -200.0%%
-title = Nâng cao hiệu quả hoạt động vận động, tập hợp cựu chiến ...
-url = https://baotintuc.vn/thoi-su/nang-cao-hieu-qua-hoat-dong-van-dong-tap-hop-cuu-chien-binh-o-co-so-20240802170325509.htm
+match = -187.5%%
+title = Bạc Liêu: Sạt lở tiếp tục xảy ra trên tuyến đê biển Đông
+url = https://baotintuc.vn/thoi-su/sat-lo-tiep-tuc-xay-ra-tren-tuyen-de-bien-dong-20240804173011677.htm
 
 [tamanhhospital.vn]
 match = -212.5%%
@@ -840,4 +840,14 @@ url = https://dichvu.vtvcab.vn/
 match = -62.5%%
 title = Mất 8 cây vàng vì chiêu lừa đơn giản
 url = https://nld.com.vn/podcast/mat-8-cay-vang-vi-chieu-lua-don-gian-196240803115233708.htm
+
+[luagaoviet.com]
+match = -125.0%%
+title = Nhiều tuyến đường TP.HCM ngập nặng sau cơn mưa
+url = https://luagaoviet.com/ban-tin-tren-mang/nhieu-tuyen-duong-tp-hcm-ngap-nang-sau-con-mua
+
+[dti.gov.vn]
+match = 7.1%%
+title = DTI: TRANG CHỦ
+url = https://dti.gov.vn/
 
