--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -349,5 +349,5 @@ url = https://pc.fsu.edu/
 [books.google.com]
 match = -333.3%%
 title = Der n-tv-Atlas: die Welt hinter den Nachrichten ; [mit ...
-url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL-BvQJOF&sig=ACfU3U2Y3FqkA5_xuIZ4hRZM5pvQPaF7bw&hl=en&sa=X&ved=2ahUKEwiknf3kxdmHAxWWGFkFHTs8A5IQ6AF6BAgiEAM
+url = https://books.google.com/books?id=lFboHwfSwFsC&pg=PA360&lpg=PA360&dq=ga+phu+uc+16&source=bl&ots=-SL-BBWCOA&sig=ACfU3U0vzWAvHCt7oo1mg-Uo_LIYOKtrvw&hl=en&sa=X&ved=2ahUKEwiJiO-DuduHAxXWHjQIHYo_Ct0Q6AF6BAgjEAM
 
