--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -387,9 +387,9 @@ title = Bamboo Airways: More than just a flight - Official Booking Site
 url = https://www.bambooairways.com/
 
 [www.youtube.com]
-match = -52.6%%
-title = They will NEVER forget these moments 🥲
-url = https://www.youtube.com/shorts/Nxad_Zjfr-g
+match = -89.5%%
+title = P.8/T.8~4000KM XUYÊN TÂM NƯỚC ÚC CÙNG SÓC ...
+url = https://www.youtube.com/watch?v=q987dIhRed4
 
 [www.publichealth.lacounty.gov]
 match = -173.7%%
