--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-04 17:22:32
+lastsearch = 2024-08-04 20:28:02
 
 [everon.online]
 match = 12.0%%
@@ -12,14 +12,14 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -24.0%%
-title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOorSgs4z6uKxS2H7aDbzev9tcQfinnDLaMQaGrXrd4SI6lko0ZV2
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOopmfuZOHDNKFj0PC877j__yG4eDnyZB8OCBaRU8icMO5LXt_sVg
 
 [format.com.vn]
 match = -100.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -16.0%%
-title = CHỢ CƯ DÂN VINHOMES OCEAN PARK @ | ✅ ...
-url = https://m.facebook.com/groups/357588832255775/posts/1215578123123504/
+match = -92.0%%
+title = Hiểu Biết Hơn Mỗi Ngày | Mới có tí đã khóc mà đòi làm lớp ...
+url = https://m.facebook.com/groups/178976120262143/posts/897810761712005/
 
 [dantri.com.vn]
 match = -60.0%%
@@ -370,4 +370,9 @@ url = https://vi.alongwalker.co/kham-pha-ve-dep-bat-tan-cua-song-truong-giang-o-
 match = -84.0%%
 title = Loạt câu hỏi an ninh bảo vệ yếu nhân từ vụ ông Trump bị ...
 url = https://plo.vn/loat-cau-hoi-an-ninh-bao-ve-yeu-nhan-tu-vu-ong-trump-bi-ban-post800436.html
+
+[www.vn.kayak.com]
+match = 9.1%%
+title = Art Hotel Commercianti
+url = https://www.vn.kayak.com/Bologna-Hotels-Art-Hotel-Commercianti.21243.ksp
 
