--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-04 17:46:01
+lastsearch = 2024-08-04 20:27:41
 
 [hk.linkedin.com]
 match = -23.1%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -200.0%%
-title = #stitch with @Steven Chan Hoi Sing #dance #lekker
-url = https://www.tiktok.com/@goodguy_goodlife/video/7378585999766572321
+match = -307.7%%
+title = #stitch with @Steven Chan Hoi Sing I broke my leg running to ...
+url = https://www.tiktok.com/@mamakkofficial/video/7371338212553280811
 
 [admissions.hku.hk]
 match = -38.5%%
