--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-04 16:32:18
+lastsearch = 2024-08-04 20:28:26
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -32,9 +32,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [thangnhomdongtam.com]
-match = -81.0%%
-title = Thang nhôm gấp 4 khúc THM4 LD Đài Loan - Hàng Cao cấp
-url = https://thangnhomdongtam.com/san-pham/thang-nhom-chu-m-cao-cap-hang-lien-doanh-dai-loan-thm4-can-nang-16-kg
+match = -109.5%%
+title = Thang nhôm gấp 4 khúc TMH3D LD Đài Loan - Cao cấp - Giá tốt
+url = https://thangnhomdongtam.com/san-pham/thang-nhom-gap-4-khuc-chu-m-hang-lien-doanh-dai-loan-tmh3d
 
 [thangnhomnhapkhau.com]
 match = -47.6%%
@@ -82,9 +82,9 @@ title = Đài Bắc – Wikipedia tiếng Việt
 url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
 [www.tripadvisor.com.vn]
-match = -42.9%%
-title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
-url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
+match = -57.1%%
+title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
 match = -100.0%%
