--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-04 14:12:41
+lastsearch = 2024-08-04 20:26:21
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Ruột gối Sông hồng khuyến mại giá rẻ nhất Hà Nội
 url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 
 [demxanh.com]
-match = -207.1%%
-title = Ưu điểm của ruột gối? Loại ruột gối nào tốt để sử dụng?
-url = https://demxanh.com/uu-diem-cua-ruot-goi-loai-ruot-goi-nao-tot-de-su-dung.html
+match = -150.0%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -73,7 +73,7 @@ url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
 match = -121.4%%
-title = ruột gối giá tốt Tháng 7, 2024 | Mua ngay
+title = ruột gối giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=ruột gối
 
 [www.changagoidemeveron.vn]
@@ -83,7 +83,7 @@ url = http://www.changagoidemeveron.vn/3/everon/ruot-goi-everon-day.html
 
 [tiki.vn]
 match = -200.0%%
-title = Ruột gối giá tốt, bền đẹp, giao siêu tốc Tháng 7, 2024
+title = Ruột gối giá tốt, bền đẹp, giao siêu tốc Tháng 8, 2024
 url = https://tiki.vn/ruot-goi/c23366
 
 [ru9.vn]
