--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-04 19:22:32
+lastsearch = 2024-08-04 20:28:45
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOooxLm6casG4kh8rlpwNDriq0FGOlrXE6x3ogBzWfhQ-z15u5eyj
 
 [pubs.acs.org]
 match = -338.5%%
@@ -699,5 +699,5 @@ url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-p
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoqITgtr8yc8RWUBUKANHuxCYthvYOx8K7jNXfKzzbBNqhsuTQZ-
 
