--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-04 20:05:21
+lastsearch = 2024-08-04 20:44:09
 
 [demxanh.com]
-match = -43.5%%
-title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+match = -47.8%%
+title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
+url = https://demxanh.com/ruot-goi-olympia.html?srsltid=AfmBOopZGFwWJ0fGUFpJlDdmI8D4bK9hl__sq7tCO2jiQ_svidzzfD-z
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/Combo-2-ruột-gối-korea-cao-cấp-ép-hơi-kích-thư
 [everonvn.com.vn]
 match = -82.6%%
 title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
-url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
+url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay?srsltid=AfmBOooh3D_zKRy37gdtR9ILU8J-9PCQwj8YfRc6V9tDQ1dJjhQGFVqd
 
 [thegioidemviet.vn]
-match = -39.1%%
-title = BẢNG GIÁ RUỘT GỐI BAMBOO - CHÍNH HÃNG VIỆT Á
-url = https://thegioidemviet.vn/ruot-chan-ruot-goi-viet-a-sao-chep/
+match = -21.7%%
+title = BẢNG GIÁ RUỘT GỐI MICRO VIỆT Á CHÍNH HÃNG
+url = https://thegioidemviet.vn/ruot-chan-ruot-goi-micro-viet-a-sao-chep/
 
 [goihuyhoang.com]
 match = -104.3%%
@@ -42,14 +42,14 @@ title = Phân phối ruột gối bông chính hãng giá rẻ nhất Hà Nội
 url = https://thegioidemonline.com/ruot-goi-bong.html
 
 [www.diepxuan.com]
-match = -21.7%%
-title = Ruột gối kê Korea 45x65 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
+match = 21.7%%
+title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html?srsltid=AfmBOoqfstnTBCj0NgCyS1pANxPj8shFRelBGX2gkhHwdy-aGGSwjeLA
 
 [tiki.vn]
-match = -87.0%%
-title = Ruột gối hơi hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=ruột gối hơi
+match = -60.9%%
+title = Ruột gối tơ tằm 50*70 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ruột gối tơ tằm 50*70
 
 [m.thitruongsi.com]
 match = -43.5%%
