--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-04 17:22:13
+lastsearch = 2024-08-04 20:43:08
 
 [en.wikipedia.org]
 match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+title = 
+url = https://en.wikipedia.org/wiki/Park_Chung_Hee
 
 [www.britannica.com]
 match = 0.0%%
