--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-04 20:11:26
+lastsearch = 2024-08-04 20:44:28
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -37,9 +37,9 @@ title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
 url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
 
 [thamtuonglam.vn]
-match = -16.7%%
-title = Thảm Xốp sần khế KT 60 x 60 màu Đỏ
-url = https://thamtuonglam.vn/tham-xop-san-khe-kt-60-x-60-mau-do
+match = 21.4%%
+title = Thảm Tường Lâm
+url = https://thamtuonglam.vn/
 
 [thamachau.vn]
 match = -55.6%%
