--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-04 14:50:43
+lastsearch = 2024-08-04 20:43:48
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -143.8%%
+title = #foryou #tiktoksalon #beautytok #hudabeauty ...
+url = https://www.tiktok.com/@hudabeauty/video/7278744176408235307
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -239,7 +239,7 @@ url = https://rltc309.com/shop/vljjrwrj-233/
 [www.nwgm300.com]
 match = -143.8%%
 title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - nwgm300.com
-url = https://www.nwgm300.com/bag/vljjrwrj-233/
+url = https://www.nwgm300.com/shop/vljjrwrj-233/
 
 [www.dmrw859.com]
 match = -193.8%%
