--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-04 13:26:36
+lastsearch = 2024-08-04 20:54:06
 
 [everon.online]
 match = 50.0%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 5.9%%
-title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+match = 17.6%%
+title = Bộ ga chun chần bốn mùa Everon 4 chi tiết màu ESM23012
+url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html
 
 [everonvn.com.vn]
 match = 2.9%%
