--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:35:14
 lastsearch = 2024-08-04 20:38:18
 
 [www.youtube.com]
-match = -89.5%%
-title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
-url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
+match = -100.0%%
+title = Cách trồng và chăm sóc để cho cây mộc hương lớn nhanh
+url = https://www.youtube.com/watch?v=RXftwVsMiEc
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -349,7 +349,7 @@ url = https://dentrongcaylgl.com/nhung-dieu-thu-vi-ve-cay-moc-huong
 [www.lazada.vn]
 match = -100.0%%
 title = Set 3 Cây hoa mộc, mộc hương ta hoa trắng thơm lâu
-url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html?srsltid=AfmBOordTtXQaAjFzUo0nXtFKsWaqttA-xlkZ9q0eqH7wFO3dGpPHV8V
+url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html
 
 [caycanhnoithat.net]
 match = -142.1%%
