--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-04 20:16:21
+lastsearch = 2024-08-04 20:44:21
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -193.8%%
-title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
-url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
+match = -181.2%%
+title = Địa điểm du lịch Nghệ An - 18 tọa độ VUI CHƠI hấp dẫn nhất
+url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
 match = -150.0%%
