--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-04 20:15:38
+lastsearch = 2024-08-04 20:51:05
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -60.0%%
-title = Celadon Sports & Resort Club
-url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
+match = -66.7%%
+title = Baïeta - Cocktails & Chic tapas
+url = https://www.facebook.com/baietasaigon.restaurant/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -309,7 +309,7 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 [concung.com]
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
-url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html?srsltid=AfmBOoqSEa7sIBBbbFhe_B2juW0LW3PPAwS5dDnVcNhgKgpPoyJXfG-4
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [tuyensinh247.com]
 match = -220.0%%
