--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-04 18:36:22
+lastsearch = 2024-08-04 20:57:45
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html?srsltid=AfmBOopVKVsIMnaNuBa24yWYVu4G7w8VbawUBebEzmaT1aI0z5BjFsny
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = 25.0%%
-title = Ga phủ ESM20013 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html?srsltid=AfmBOoreemdEmyVSXfaK3eZ93WtPR1OG3gBz5RzzLIgilhIV9g6x5N9G
+match = 10.7%%
+title = Điệp Xuân Ga chun chần ES1707 160x200
+url = https://www.diepxuan.com/ga-chun-chan-es1707-160x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
