--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-04 15:46:01
+lastsearch = 2024-08-04 20:51:51
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooVo2XO1BZScGT75LPAKHDiZ11W2NL7vP4_aojZy5PTLtIBDQHk
 
 [tiki.vn]
-match = -129.4%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
+match = -117.6%%
+title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
 
 [www.lazada.vn]
 match = -135.3%%
 title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
-url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html?srsltid=AfmBOoopZNVNj-EWG9TapUgl3gC6C_ZSbJpsSpRsBoGLqIgSWTGe6Imw
 
 [thegioidemviet.vn]
 match = -152.9%%
