--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-04 18:36:01
+lastsearch = 2024-08-04 20:53:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Thảm lót cửa sợi mịn Shaggy
 url = https://thamht.vn/products/nhan-ban-cua-tham-chui-chan-shaggy-hinh-thoi
 
 [cauhaihomedecor.vn]
-match = 58.3%%
-title = THẢM CHÂN WONDERFUL 50X80CM
-url = https://cauhaihomedecor.vn/tham-chan-wonderful
+match = 62.5%%
+title = THẢM CHÂN ARTHUR 50X80CM
+url = https://cauhaihomedecor.vn/tham-chan-arthur
 
 [www.khotham.com]
 match = -62.5%%
