--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -22,9 +22,9 @@ title = Thảm xốp một màu 60cm x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
-match = -5.6%%
-title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
-url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
+match = -61.1%%
+title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
+url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
 match = -111.1%%
