--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-04 14:46:57
+lastsearch = 2024-08-04 20:47:10
 
 [www.tui.co.uk]
-match = -183.3%%
-title = Asia Holidays 2024 / 2025 - Destinations
-url = https://www.tui.co.uk/destinations/asia/holidays-asia.html
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -350.0%%
+title = We take travel to new heights: TUI launches holiday trips ...
+url = https://www.linkedin.com/posts/tuigroup_we-take-travel-to-new-heights-tui-launches-activity-7180438234118643713-PVeJ
 
 [maritime-executive.com]
 match = -308.3%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -325.0%%
-title = Tour giant TUI expects bright summer despite higher prices
-url = https://www.reuters.com/business/retail-consumer/tui-posts-less-than-forecast-q2-loss-winter-bookings-rise-2024-05-15/
+match = -216.7%%
+title = TUI AG says will not make offer for TUI Travel
+url = https://www.reuters.com/article/business/tui-ag-says-will-not-make-offer-for-tui-travel-idUSTRE49F1VI/
 
 [www.mybaggage.com]
 match = -116.7%%
