--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-04 20:31:52
+lastsearch = 2024-08-04 21:17:55
 
 [www.zillow.com]
-match = -69.2%%
-title = 18 Long St, Newnan, GA 30263
-url = https://www.zillow.com/homedetails/18-Long-St-Newnan-GA-30263/54506040_zpid/
+match = -115.4%%
+title = 18 Long St #18, East Pt, GA 30344
+url = https://www.zillow.com/homedetails/18-Long-St-18-East-Pt-GA-30344/249124519_zpid/
 
 [blog.massmutual.com]
 match = -276.9%%
@@ -655,4 +655,9 @@ url = https://unfccc.int/process/the-paris-agreement/long-term-strategies
 match = -138.5%%
 title = Georgia Northwestern Technical College
 url = https://www.gntc.edu/
+
+[ucr.fbi.gov]
+match = -53.8%%
+title = NICS Guide for Appealing
+url = https://ucr.fbi.gov/nics/appeals/nics-guide-for-appealing
 
