--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-04 20:44:21
+lastsearch = 2024-08-04 21:15:30
 
 [helloviettravel.com]
 match = -181.2%%
@@ -19,7 +19,7 @@ url = http://saovangtravel.com/du-lich-x/du-lich-xuyen-viet-19-ngay-18-dem/
 [hanhhuonghoasen.com.vn]
 match = -50.0%%
 title = DU LỊCH XUYÊN VIỆT 18N17D GIÁ RẺ
-url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet
+url = https://hanhhuonghoasen.com.vn/du-lich-xuyen-viet?srsltid=AfmBOooZ5B0Z8EKVC0xv1kPVrpoejgRNkJ5kjqiPLJz7Ar4M2G4wbi9Z
 
 [vtv.vn]
 match = -181.2%%
