--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-04 19:25:42
+lastsearch = 2024-08-04 21:25:46
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -8.3%%
-title = Mai Thanh Hạ
-url = https://www.facebook.com/maithanhha19/
+match = -212.5%%
+title = Tại sao V.League không chơi như Thai League, cho phép các ...
+url = https://www.facebook.com/Onsportchannel/videos/tại-sao-vleague-không-chơi-như-thai-league-cho-phép-các-cầu-thủ-đông-nam-á-chơi-/1232801161088673/
 
 [suckhoedoisong.vn]
 match = -225.0%%
