--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-04 14:55:35
+lastsearch = 2024-08-04 21:17:13
 
 [tuananh.vn]
 match = 22.2%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOorH6fDthd0e02iLj3dMBptDKXmRpAU-vlYdHPFYn7Cs-6M1R7TA
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOoqcWhzjfxGz2RE06CYOCDiZCfcZ9SfKdkdlstAaKCBlDdMZh0rf
 
 [m.facebook.com]
 match = -76.0%%
