--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-04 20:14:56
+lastsearch = 2024-08-04 21:32:35
 
 [munghoangphat.com]
 match = -24.0%%
@@ -32,9 +32,9 @@ title = Màn tự bung dinh vuong 16
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 
 [www.mantubung.com]
-match = -8.0%%
-title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
-url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
+match = -52.0%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [demvip.vn]
 match = 52.0%%
@@ -44,7 +44,7 @@ url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 [www.lazada.vn]
 match = 4.0%%
 title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
+url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html?srsltid=AfmBOooYLBwDSmA-mF0JF5-2S1nFVaJZmbiBZl1wpPzLsKwpmkTxmM-F
 
 [everonvn.com.vn]
 match = 0.0%%
