--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-04 19:55:41
+lastsearch = 2024-08-04 21:46:38
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,14 +12,14 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -100.0%%
-title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
-url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
+match = -128.6%%
+title = Thảm sàn Bali- thảm trang trí sang trọng, hoa văn , đường ...
+url = https://shopee.vn/Thảm-sàn-Bali-thảm-trang-trí-sang-trọng-hoa-văn-đường-chỉ-chắc-chắn-kt-2-3m-x-3m-(-VIDEO-KÈM-ẢNH-THẬT)-i.3551312.5349158590
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -104.8%%
+title = ( TẶNG THẢM CHÂN ) Thảm nỉ trải sàn phòng khách [ 2m x ...
+url = https://www.lazada.vn/products/tang-tham-chan-tham-ni-trai-san-phong-khach-2m-x-3m-va-2m3-x-16m-tham-bali-sang-trong-hon-tham-long-tham-trai-san-balitham-trang-tri-phong-nguphong-khach-da-dang-mau-mahang-san-tham-ni-i408728790.html
 
 [tiki.vn]
 match = -9.5%%
@@ -38,8 +38,8 @@ url = https://websosanh.vn/s/thảm+trải+sàn+1+6.htm
 
 [www.tiktok.com]
 match = -71.4%%
-title = 💥💥 50 MẪU THẢM TRẢI SÀN BALI NHẬP KHẨU CAO CẤP ...
-url = https://www.tiktok.com/@giadung_tienich2/video/7300064357969317128
+title = 💥💥 50 Mẫu THẢM TRẢI SÀN BALI NHẬP KHẨU CAO CẤP ...
+url = https://www.tiktok.com/@giadung_tienich2/video/7302074736182414610
 
 [iprice.vn]
 match = -19.0%%
