--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-04 15:26:58
+lastsearch = 2024-08-04 21:32:56
 
 [shopee.vn]
 match = -25.9%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = 11.1%%
-title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
+match = -18.5%%
+title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [vnvc.vn]
 match = -59.3%%
