--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-04 17:46:22
+lastsearch = 2024-08-04 21:40:18
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOoqdHC74dRTj2jYJ7585iPIIlZ_ABWH2Ril30Yfdqvmn0cYPHZIb
+url = https://demxanh.com/chan-long-3kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 8.7%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoo_hDBpGdzL-4DInDnvgK8maH2KACVC9RDt_Q1XdgJot63ET7pb
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOorKSf_f-ZLVfDPJDuU6EuOiVaAQ374BaItwv5mkVFHkoIU3OB8v
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
 match = -87.0%%
@@ -210,4 +210,9 @@ url = https://thoxuan.thanhhoa.gov.vn/web/trang-chu/thong-tin-tuyen-truyen/tt-tr
 match = 11.1%%
 title = CHỢ HOÀ LẠC ONLINE
 url = https://www.facebook.com/groups/500424327529776/
+
+[amscau.icar.gov.in]
+match = 13.0%%
+title = soi kèo hà lan vs senegal
+url = https://amscau.icar.gov.in/ios/soi-keo-ha-lan-vs-senegal.aspx
 
