--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-04 18:51:34
+lastsearch = 2024-08-04 21:33:56
 
 [demxanh.com]
 match = 34.5%%
-title = Chiếu điều hòa cao su non Modern viền lụa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-modern-vien-lua.html
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [leflair.com]
 match = 6.9%%
