--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-04 14:18:56
+lastsearch = 2024-08-04 21:38:53
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -242,9 +242,9 @@ title = Nhà đầu tư Thái Lan tìm hiểu cơ hội đầu tư tại Việt 
 url = https://yuanta.com.vn/tin-tuc/nha-dau-tu-thai-lan-tim-hieu-co-hoi-dau-tu-tai-viet-nam
 
 [hoanghoa.gov.vn]
-match = -114.3%%
-title = Giải bóng đá phong trào Nông dân U35 vùng Đông Nam ...
-url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/van-hoa-thong-tin-the-thao-va-du-lich/giai-bong-da-phong-trao-nong-dan-u35-vung-dong-nam-huyen-hoang-hoa.html
+match = -71.4%%
+title = Hoằng Sơn- sôi nổi các hoạt động hè năm 2024.
+url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/van-hoa-thong-tin-the-thao-va-du-lich/hoang-son-soi-noi-cac-hoat-dong-he-nam-2024.html
 
 [baonamdinh.vn]
 match = -66.7%%
