--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-04 18:59:09
+lastsearch = 2024-08-04 21:42:28
 
 [burningman.org]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -253.3%%
-title = Tony Robbins । 34 Minutes for the NEXT 34 Years of Your LIFE
-url = https://www.youtube.com/watch?v=O9F19ban7A4
+match = 0.0%%
+title = Primitive Technology
+url = https://www.youtube.com/@primitivetechnology9550
 
 [www.hcso.org]
 match = 7.7%%
