--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-04 19:35:10
+lastsearch = 2024-08-04 21:43:10
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.etsy.com]
 match = 35.7%%
@@ -67,9 +67,9 @@ title = Tổng hợp thông tin iPhone 16: Khi nào ra mắt và giá bao ...
 url = https://dienmaycholon.vn/kinh-nghiem-mua-sam/tong-hop-thong-tin-iphone-16-khi-nao-ra-mat-gia-ban-bao-nhieu
 
 [www.thegioididong.com]
-match = -200.0%%
-title = Cách khắc phục lỗi màn hình xanh Windows 11 nhanh ...
-url = https://www.thegioididong.com/hoi-dap/cach-khac-phuc-loi-man-hinh-xanh-windows-nhanh-1550329
+match = -164.3%%
+title = Điện thoại OPPO A16 chính hãng giảm 200.000đ
+url = https://www.thegioididong.com/dtdd/oppo-a16
 
 [suachualaptop24h.com]
 match = -235.7%%
