--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-04 14:24:57
+lastsearch = 2024-08-04 21:39:13
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -62,9 +62,9 @@ title = Conception Vessel 12, CV 12, Ren-12 - Acupuncture-points.org
 url = https://www.acupuncture-points.org/conception-vessel-12.html
 
 [www.youtube.com]
-match = -500.0%%
-title = Ren 12 Location (CV12, Zhongwan 中脘穴) - Acupuncture ...
-url = https://www.youtube.com/watch?v=yz6IZ8xiNBw
+match = -340.0%%
+title = Functions of Ren 12 (CV12, Zhongwan 中脘穴)
+url = https://www.youtube.com/watch?v=W1LAqwFK9Rw
 
 [www.maciociaonline.com]
 match = -250.0%%
