--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-04 18:30:06
+lastsearch = 2024-08-04 21:38:30
 
 [quizlet.com]
 match = -170.0%%
@@ -47,9 +47,9 @@ title = Loom + Forge Ren 16-pc. Stoneware Dinnerware Set
 url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/ppr5008057935?pTmplType=regular
 
 [en.wikipedia.org]
-match = 16.7%%
-title = MC Ren
-url = https://en.wikipedia.org/wiki/MC_Ren
+match = -120.0%%
+title = List of acupuncture points
+url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
 match = -280.0%%
