--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-04 20:29:46
+lastsearch = 2024-08-04 21:31:33
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -49,7 +49,7 @@ url = https://everon.online/products/vo-boc-dem-bong-ep-everon
 [everonvn.com.vn]
 match = 3.6%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoqOPZ1UppMYVqxjC9BUXBTk4Pao6TSj04xkbapdGedzfR3JdXQS
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [demchinhhang.com]
 match = 12.9%%
