CI images update

--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-04 20:20:05
+lastsearch = 2024-08-04 22:19:44
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -470,4 +470,9 @@ url = https://mobilecity.vn/tin-tuc/top-phim-chieu-rap-thang-6-2024-gay-sot.html
 match = -50.0%%
 title = Lịch phát sóng chương trình VTV
 url = https://vtv.vn/lich-phat-song.htm
+
+[www.cgv.vn]
+match = -175.0%%
+title = LẬT MẶT 7: MỘT ĐIỀU ƯỚC 2024 | Thông tin - Lịch chiếu
+url = https://www.cgv.vn/default/lat-mat-7.html
 
