--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-04 20:54:06
+lastsearch = 2024-08-04 22:17:00
 
 [everon.online]
-match = 50.0%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+match = -44.4%%
+title = Bộ Everon EPM24061
+url = https://everon.online/products/bo-everon-epm24061
 
 [www.everonvn.vn]
 match = -32.4%%
@@ -27,14 +27,14 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 17.6%%
-title = Bộ ga chun chần bốn mùa Everon 4 chi tiết màu ESM23012
-url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html
+match = 5.9%%
+title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
-match = 2.9%%
-title = Bộ chăn ga gối Everon EST-25022 Màu hồng cam
-url = https://everonvn.com.vn/everon/4791/bo-everon-est-25022
+match = 23.5%%
+title = Bộ Ga Chun Giảm Giá - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/57/bo-ga-chun-giam-gia
 
 [www.diepxuan.com]
 match = 100.0%%
