--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-04 20:02:59
+lastsearch = 2024-08-04 22:21:45
 
 [shopee.vn]
-match = 19.4%%
-title = Chăn Chiếu Thái Bình, Cửa hàng trực tuyến
-url = https://shopee.vn/phuong97tb
+match = 12.9%%
+title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước)
+url = https://shopee.vn/chiếu-nhựa-thái-bình-tiện-dụng-(đủ-mọi-kích-thước)-i.1134304416.23562686178
 
 [tiki.vn]
 match = 48.4%%
@@ -17,14 +17,14 @@ title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
 url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
 
 [www.diepxuan.com]
-match = -10.0%%
-title = Điệp Xuân Chiếu nhựa
-url = https://www.diepxuan.com/chieu/chieu-nhua.html?p=2
+match = 48.4%%
+title = Điệp Xuân Chiếu gấp Thái Bình 180x200
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x200.html
 
 [m.facebook.com]
-match = 12.9%%
-title = Chung cư nhà xã hội - Âu Cơ - Hoà Khánh
-url = https://m.facebook.com/groups/661270174478229/posts/1536393513632553/
+match = 19.4%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61553157173242/
 
 [trangvangvietnam.com]
 match = 20.0%%
